# blue-recorder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  i18n.toml  tests
.github/workflows/: test.yml  update_changelog.yml
blue-recorder/: Cargo.toml
blue-recorder-core/src/: ffmpeg_linux.rs  ffmpeg_windows.rs  lib.rs
blue-recorder/interfaces/: about_dialog.ui  area_selection.ui  error_dialog.ui
blue-recorder/src/: config_management.rs  ui.rs
core/: Cargo.toml
core/src/: ffmpeg_linux.rs  ffmpeg_windows.rs  lib.rs  utils.rs  wayland_linux.rs
data/: blue-recorder.desktop
flatpak/: cargo-sources.json  sa.sy.bluerecorder.desktop  sa.sy.bluerecorder.metainfo.xml  sa.sy.bluerecorder.yaml
gui/: Cargo.toml
gui/interfaces/: area_selection.ui  error_dialog.ui  main.ui  select_window.ui  spinner.ui
gui/src/: area_capture.rs  area_selector_overlay.rs  config_management.rs  main.rs  timer.rs  ui.rs  utils.rs
gui/src/styles/: global.css
i18n/po/ar/: blue_recorder.po
i18n/pot/: blue_recorder.pot
i18n/pot/src/: ffmpeg_interface.pot  main.pot  timer.pot
interfaces/: area_selection.ui  delay.ui  main.ui  select_window.ui
locales/: ar.ftl  ar_SA.ftl  ar_YE.ftl  cs.po_backup  el.po_backup  en-US.ftl  en.ftl  en_US.ftl  es.po_backup  oc.po_backup  pl.po_backup  pt_BR.ftl  pt_BR.po_backup  ru.po_backup  sv.po_backup
locales/backup/: backup.ca.po  backup.de.po  backup.fr_FR.po  backup.zh_CN.po  backup.zh_Hans.po
packaging/appimage/: blue-recorder-appimage.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules  watch
packaging/guix/: blue-recorder.scm
packaging/pkg/: PKGBUILD
packaging/rpm/: blue-recorder.spec
po/: LINGUAS  POTFILES  ar.po  blue-recorder.pot  ca.po  de.po  es.po  fr_FR.po  it.po  nl_NL.po  pl.po  pt_BR.po  ru.po  tr  tr.po  zh_TW.po
snap/: snapcraft.yaml
src/: area_capture.rs  config_management.rs  ffmpeg_interface.rs  fluent.rs  indicator.rs  main.rs  signal_handle.rs  timer.rs  ui.rs  utils.rs  waylan_interface.rs  wayland_record.rs
src/po/: ar.po  blue-recorder.pot
src/styles/: global.css
windows/: ui.glade
