[package]
name = "blue-recorder"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = "0.4.19"
dark-light = "1.0.0"
dirs = "4.0.0"
fluent-bundle = "0.15.3"
filename = "0.1.1"
gdk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gdk4"}
gdk-pixbuf = "0.9.0"
gio = { version = "0.15.0" }
glib = "0.10.3"
gstreamer = "0.20.5"
gtk = { version = "0.4.6", package = "gtk4", features = ["v4_6"] }
gtk-sys = "0.15"
regex = "1.4.3"
rust-ini = "0.16"
secfmt = "0.1.1"
subprocess = "0.2.6"
tempfile = "3.10.1"
zbus = "3.12.0"
