[package]
name = "blue-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = {version = "1.12.0", features = ["attributes"]}
blue-recorder-core = { git = "https://github.com/ochibani/blue-recorder-core.git", rev = "85c9d8f" }
cpal = "0.15.3"
dark-light = "1.0.0"
dirs = "4.0.0"
fluent-bundle = "0.15.3"
glib = "0.10.3"
libadwaita = { version = "0.1.1" }
regex = "1.4.3"
rust-ini = "0.16"
secfmt = "0.1.1"
