[package]
name = "blue-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = {version = "1.12.0", features = ["attributes"]}
blue-recorder-core = { git = "https://github.com/ochibani/blue-recorder-core.git", rev = "ae9fa71" }
cpal = "0.15.3"
dark-light = "1.0.0"
dirs = "4.0.0"
fluent-bundle = "0.15.3"
glib = "0.10.3"
libadwaita = { version = "0.1.1" }
rdev = "0.5"
regex = "1.4.3"
rust-ini = "0.16"
secfmt = "0.1.1"

# Windows-only dependency
[target.'cfg(windows)'.dependencies]
display-info = "0.5.1"
x-win = "2.0.2"
winapi = { version = "0.3", features = ["winuser"] }
