[package]
name = "blue-recorder-core"
version = "0.1.0"
edition = "2021"

[features]
cmd = []
gtk = ["adw", "chrono", "glib", "subprocess"]

[dependencies]
adw = { version = "0.2.1", package = "libadwaita", features = ["gtk_v4_6"], optional = true }
anyhow = "1.0.86"
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = { version = "0.4.19", optional = true }
ffmpeg-sidecar = "2.0.5"
glib = { version = "0.10.3", optional = true }
open = "5.1.4"
subprocess = {version = "0.2.6", optional = true }
tempfile = "3.10.1"
zbus = "5.3.0"

# FreeBSD/Linux-only dependency
[target.'cfg(not(windows))'.dependencies]
gstreamer = "0.23.4"
