[package]
name = "blue-recorder-core"
version = "0.1.0"
edition = "2021"

[features]
cmd = []
gtk = ["adw", "chrono", "glib", "subprocess"]

[dependencies]
adw = { version = "0.2.1", package = "libadwaita", features = ["gtk_v4_6"], optional = true }
anyhow = "1.0.102"
async-std = {version = "1.13.2", features = ["attributes"]}
chrono = { version = "0.4.44", optional = true }
ffmpeg-sidecar = "2.5.2"
futures-util = "0.3"
glib = { version = "0.22.7", optional = true }
open = "5.3.5"
subprocess = {version = "1.1.0", optional = true }
tempfile = "3.27.0"
zbus = "5.16.0"

# FreeBSD/Linux-only dependency
[target.'cfg(not(windows))'.dependencies]
gstreamer = "0.25.2"
