[package]
name = "blue-recorder-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-std = { version = "1.13.2", features = ["attributes"] }
ffmpeg-sidecar = "2.5.2"
futures-util = "0.3"
open = "5.3.5"
tempfile = "3.27.0"
zbus = "5.16.0"

[target.'cfg(not(windows))'.dependencies]
gstreamer = "0.25.2"
