[package]
name = "blue-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = {version = "1.12.0", features = ["attributes"]}
blue-recorder-core = { path = "../core" }
chrono = "0.4.19"
cpal = "0.15.3"
dark-light = "1.0.0"
dirs = "4.0.0"
fluent-bundle = "0.15.3"
glib = "0.10.3"
adw = { version = "0.2.1", package = "libadwaita", features = ["gtk_v4_6"] }
rdev = "0.5"
regex = "1.4.3"
rust-ini = "0.16"
secfmt = "0.1.1"

# Windows-only dependency
[target.'cfg(windows)'.dependencies]
display-info = "0.5.1"
winapi = { version = "0.3", features = ["winuser"] }
x-win = "2.0.2"
