[package]
name = "blue-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.2.1", package = "libadwaita", features = ["gtk_v4_6"] }
anyhow = "1.0.102"
async-std = {version = "1.13.2", features = ["attributes"]}
blue-recorder-core = { path = "../core" }
chrono = "0.4.44"
subprocess = "1.1.0"
dirs = "6.0.0"
fluent-bundle = "0.16.0"
glib = "0.22.7"
regex = "1.12.3"
rust-ini = "0.21"
secfmt = "0.1.1"

# Windows-only dependency
[target.'cfg(windows)'.dependencies]
cpal = "0.17.3"
display-info = "0.5.9"
winapi = { version = "0.3", features = ["winuser"] }
x-win = "5.7.0"
